dig-src/main/default/objects/DIG_MembershipStatusPolicy__mdt/DIG_MembershipStatusPolicy__mdt.object-meta.xml
<CustomObject>
    <label>DIG Membership Status Policy</label>
    <pluralLabel>DIG Membership Status Policies</pluralLabel>
</CustomObject>