dig-src/main/default/objects/DIG_MembershipStatusPolicy__mdt/fields/DefaultGraceDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultGraceDays__c</fullName>
    <label>Default Grace Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>