dig-src/main/default/objects/DIG_MembershipStatusPolicy__mdt/fields/MemberSinceResetsOnRejoin__c.field-meta.xml
<CustomField>
    <fullName>MemberSinceResetsOnRejoin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Since Resets On Rejoin</label>
    <type>Checkbox</type>
</CustomField>