dig-src/main/default/objects/DIG_MembershipStatusPolicy__mdt/fields/UseGraceStatus__c.field-meta.xml
<CustomField>
    <fullName>UseGraceStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Grace Status</label>
    <type>Checkbox</type>
</CustomField>